Edited Quests to be readable and responsive, fixed the sound to be low and it loops

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+
+#video-bg {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  transform: translate(-50%, -50%);
+}
 body {
   background-image: url('https://media1.giphy.com/media/Bmsd0lmn6ZpbaTyhQM/giphy.gif');
   background-repeat: no-repeat;
@@ -11,4 +23,6 @@ body {
   display: flex;
   justify-content: baseline;
 }
+
+
 
